<?xml version="1.0"?>
<package format="2">
  <name>auto_explore</name>
  <version>0.0.1</version>
  <description>Minimal exploration package with waypoint mission node.</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
</package>
